--- a/client/src/components/ui/HouseList.css
+++ b/client/src/components/ui/HouseList.css
@@ -1,7 +1,7 @@
 .list {
   display: grid;
   margin: auto;
-  padding: 0;
+  padding: 30px;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 2em;
 }
